[metadata]
name = httpfile
version = attr: httpfile.__version__
description = Operate on virtualized versions of files available over http.
url = https://github.com/cosmicexplorer/httpfile
author = Danny McClanahan
author_email = danieldmcclanahan@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    http
    zip
    file
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    requests
    dataclasses; python_version=='3.6'

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

[flake8]
max-line-length = 80
exclude =
    .git,
    .venvs,
    __pycache__,
    build,
    dist,
